# coastal-emergency-agent-egu2026

./: .gitignore  README.md  pyproject.toml
coastal_agent/: __init__.py  alerts.py  brief.py  config.py  db.py  email_send.py  evaluator.py  llm.py  main.py  orchestrator.py  policy.py  retrieval.py  scenario.py  scheduler.py  sea_level.py  tools.py  trigger.py  weather.py
dashboard/: __init__.py  api.py
dashboard/templates/: base.html  brief.html  incident.html  index.html
deploy/: coastal-agent.env.example  coastal-agent.service  coastal-dashboard.service
models/: .gitkeep
scenarios/: lido_acqua_alta_01.jsonl
tests/: test_brief.py  test_dashboard.py  test_db.py  test_email_send.py  test_llm.py  test_orchestrator.py  test_policy.py  test_scenario.py  test_scheduler.py  test_sea_level.py  test_tools.py  test_trigger.py  test_weather.py
